force-app/main/default/objects/Case/fields/checkParentCase__c.field-meta.xml
<CustomField>
    <fullName>checkParentCase__c</fullName>
    <formula>IF(NOT(ISBLANK(ParentId)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>checkParentCase</label>
    <type>Checkbox</type>
</CustomField>