force-app/main/default/objects/Case/fields/Cheque_Handover_date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Handover_date__c</fullName>
    <label>Cheque Handover date</label>
    <type>Date</type>
</CustomField>