force-app/main/default/objects/Case/fields/Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Number__c</fullName>
    <description>Stores the number associated with a cheque or NEFT (Electronic Fund Transfer) transaction.</description>
    <label>NEFT/Cheque Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>