force-app/main/default/objects/Case/fields/Cheque_Number_From__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Number_From__c</fullName>
    <label>Cheque Number From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>