force-app/main/default/objects/Case/fields/Cheque_Number_From_LOS__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Number_From_LOS__c</fullName>
    <description>Shows if a record has been deleted.</description>
    <label>Cheque Number(From LOS)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>