force-app/main/default/objects/Case/fields/Cheque_Status__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Status__c</fullName>
    <label>NEFT/Cheque Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>