force-app/main/default/objects/Case/fields/Cheque_Status_New__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Status_New__c</fullName>
    <description>The current status of a submitted cheque payment.</description>
    <label>Cheque Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Discrepant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>