force-app/main/default/objects/Case/fields/Child_Case__c.field-meta.xml
<CustomField>
    <fullName>Child_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Case</label>
    <type>Checkbox</type>
</CustomField>