force-app/main/default/objects/Case/fields/Child_Closed__c.field-meta.xml
<CustomField>
    <fullName>Child_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Closed</label>
    <type>Checkbox</type>
</CustomField>