force-app/main/default/objects/Case/fields/ChildAppeal__c.field-meta.xml
<CustomField>
    <fullName>ChildAppeal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ChildAppeal</label>
    <type>Checkbox</type>
</CustomField>