force-app/main/default/objects/Case/fields/CIBIL_Score__c.field-meta.xml
<CustomField>
    <fullName>CIBIL_Score__c</fullName>
    <description>A credit score that represents the creditworthiness of a customer.</description>
    <label>CIBIL Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>