force-app/main/default/objects/Case/fields/CIBIL_Trigger__c.field-meta.xml
<CustomField>
    <fullName>CIBIL_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if there&apos;s a CIBIL credit information trigger.</description>
    <label>CIBIL Trigger</label>
    <type>Checkbox</type>
</CustomField>