force-app/main/default/objects/Case/fields/CIBIL_Trigger_Calling_Update__c.field-meta.xml
<CustomField>
    <fullName>CIBIL_Trigger_Calling_Update__c</fullName>
    <label>CIBIL Trigger Calling Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balance Transfer</fullName>
            </value>
            <value>
                <fullName>Delinquent</fullName>
            </value>
            <value>
                <fullName>Enhancement/New Loan</fullName>
            </value>
            <value>
                <fullName>Auto Top Up</fullName>
            </value>
            <value>
                <fullName>No Issues</fullName>
            </value>
            <value>
                <fullName>Repricing</fullName>
            </value>
            <value>
                <fullName>Repricing + New Loan</fullName>
            </value>
            <value>
                <fullName>Sale Of Property</fullName>
            </value>
            <value>
                <fullName>Service Issue</fullName>
            </value>
            <value>
                <fullName>Adequate Funds</fullName>
            </value>
            <value>
                <fullName>Language Issue</fullName>
            </value>
            <value>
                <fullName>Not Contactable 1</fullName>
            </value>
            <value>
                <fullName>Not Contactable 2</fullName>
            </value>
            <value>
                <fullName>Not Contactable 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>