force-app/main/default/objects/Case/fields/CIBIL_Trigger_Date__c.field-meta.xml
<CustomField>
    <fullName>CIBIL_Trigger_Date__c</fullName>
    <label>CIBIL Trigger Date</label>
    <type>Date</type>
</CustomField>