force-app/main/default/objects/Case/fields/Claim_Stage_Changed__c.field-meta.xml
<CustomField>
    <fullName>Claim_Stage_Changed__c</fullName>
    <label>Claim Stage Changed</label>
    <type>Date</type>
</CustomField>