force-app/main/default/objects/Case/fields/Clearance_of_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Clearance_of_Cheque__c</fullName>
    <description>Indicates if a cheque has been cleared.</description>
    <label>Clearance of Cheque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Example</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>