force-app/main/default/objects/Case/fields/Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Closed_By__c</fullName>
    <description>If status is closed then the value of Closed By will be equal to Last Modified By</description>
    <formula>If ( ISPICKVAL( Status , &apos;Closed&apos;), ( LastModifiedBy.FirstName+ &apos; &apos; + LastModifiedBy.LastName ), Null)</formula>
    <label>Closed By</label>
    <type>Text</type>
</CustomField>