force-app/main/default/objects/Case/fields/Closed_By_Id1__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_Id1__c</fullName>
    <description>This field is Captured by Before Trigger</description>
    <label>Closed By Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>