force-app/main/default/objects/Case/fields/Closed_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_Id__c</fullName>
    <description>Old Formula - IF(ISPICKVAL(Status,&apos;Closed&apos;),CASESAFEID($LastModifiedById),Null)
The formula was changed to prevent Closed By Id = Platform Integration User Id. (To prevent Case Owner to be PIU in Email to Case)</description>
    <formula>Closed_By_Id1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed By Id</label>
    <type>Text</type>
</CustomField>