force-app/main/default/objects/Case/fields/Closed_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_Name__c</fullName>
    <label>Closed By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>