force-app/main/default/objects/Case/fields/Closed_By_System__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed By System</label>
    <type>Checkbox</type>
</CustomField>