force-app/main/default/objects/Case/fields/Closed_By_Team__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_Team__c</fullName>
    <label>Closed By Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>