force-app/main/default/objects/Case/fields/Closed_By_User__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>