force-app/main/default/objects/Case/fields/Closure_Inputs__c.field-meta.xml
<CustomField>
    <fullName>Closure_Inputs__c</fullName>
    <description>Contains input or details required for closing a case or process.</description>
    <label>Closure Inputs</label>
    <type>TextArea</type>
</CustomField>