force-app/main/default/objects/Case/fields/Closure_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Closure_Remarks__c</fullName>
    <description>Comments or notes when closing a case.</description>
    <label>Closure Remarks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request approved and processed</fullName>
            </value>
            <value>
                <fullName>Request declined</fullName>
            </value>
            <value>
                <fullName>Application approved ans sanctioned</fullName>
            </value>
            <value>
                <fullName>Legal &amp; Technical pending</fullName>
            </value>
            <value>
                <fullName>Refund processed.</fullName>
            </value>
            <value>
                <fullName>Refund Denied. Customer informed.</fullName>
            </value>
            <value>
                <fullName>Approval awaited and customer informed of the TAT</fullName>
            </value>
            <value>
                <fullName>Cancellation processed. Customer Informed.</fullName>
            </value>
            <value>
                <fullName>Cancellation initiated. Customer Informed.</fullName>
            </value>
            <value>
                <fullName>Queries resolved</fullName>
            </value>
            <value>
                <fullName>Matter raised to underwriting team</fullName>
            </value>
            <value>
                <fullName>Matter raised to ZOM/ZAM</fullName>
            </value>
            <value>
                <fullName>NOC issued to the customer</fullName>
            </value>
            <value>
                <fullName>NOC not issued as the account is not regular</fullName>
            </value>
            <value>
                <fullName>GST number updated</fullName>
            </value>
            <value>
                <fullName>GST number not updataded</fullName>
            </value>
            <value>
                <fullName>EMI revised</fullName>
            </value>
            <value>
                <fullName>EMI not revised as per internal processed</fullName>
            </value>
            <value>
                <fullName>ROI offer extended over the counter</fullName>
            </value>
            <value>
                <fullName>ROI revision not feasible. Customer Informed.</fullName>
            </value>
            <value>
                <fullName>Copy of Sale Deed &amp; MODT</fullName>
            </value>
            <value>
                <fullName>Scan copy provided</fullName>
            </value>
            <value>
                <fullName>Scan copy not available with CPC</fullName>
            </value>
            <value>
                <fullName>MODT not collected from SRO</fullName>
            </value>
            <value>
                <fullName>To Collect Property documents from builder &amp; update list of documents</fullName>
            </value>
            <value>
                <fullName>Documents collected and updated LOD provided to customer</fullName>
            </value>
            <value>
                <fullName>ASM/Coordinator informed to collect the necessary documents. TAT informed to customer</fullName>
            </value>
            <value>
                <fullName>LOD issued over the counter</fullName>
            </value>
            <value>
                <fullName>LOD issued on email</fullName>
            </value>
            <value>
                <fullName>Charges not paid LOD not issued.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>