force-app/main/default/objects/Case/fields/Co_Lending_Rate__c.field-meta.xml
<CustomField>
    <fullName>Co_Lending_Rate__c</fullName>
    <description>Interest rate for a loan provided by co-lenders.</description>
    <label>Co-Lending Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>