force-app/main/default/objects/Case/fields/Collection_Team_Approval__c.field-meta.xml
<CustomField>
    <fullName>Collection_Team_Approval__c</fullName>
    <description>Approval status from the collection team for specific actions.</description>
    <label>Collection Team Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>