force-app/main/default/objects/Case/fields/Complaint_Description__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Description__c</fullName>
    <label>Complaint Description</label>
    <type>TextArea</type>
</CustomField>