force-app/main/default/objects/Case/fields/Complaint_Reason__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Reason__c</fullName>
    <description>The nature or type of the case or request.</description>
    <label>Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Escalated Request</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Duplicate Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>