force-app/main/default/objects/Case/fields/Complaint_Source__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Source__c</fullName>
    <description>The source from which a customer complaint originated.</description>
    <label>Case Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banking Ombudsman</fullName>
            </value>
            <value>
                <fullName>Board of directors</fullName>
            </value>
            <value>
                <fullName>Call at Branch</fullName>
            </value>
            <value>
                <fullName>Call at CSO</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>E-Consumers Forums</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Ingram</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>IRDAI</fullName>
            </value>
            <value>
                <fullName>IVR</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>MD&apos;s Office</fullName>
            </value>
            <value>
                <fullName>Ministry of Finance</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>NHB</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>PMO-CPGRAM</fullName>
            </value>
            <value>
                <fullName>PNB Bank(parent)</fullName>
                <label>PNB</label>
            </value>
            <value>
                <fullName>RBI</fullName>
            </value>
            <value>
                <fullName>Sr. Management</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Toll-Free</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Walk in</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Post &amp; Courier</fullName>
            </value>
            <value>
                <fullName>Facebook Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>