force-app/main/default/objects/Case/fields/Complaint_Source_Referece_Number__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Source_Referece_Number__c</fullName>
    <description>Keeps track of the reference number for the source of a customer complaint.</description>
    <label>Complaint Source Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>