force-app/main/default/objects/Case/fields/Complaints_if_any__c.field-meta.xml
<CustomField>
    <fullName>Complaints_if_any__c</fullName>
    <description>Any reported customer complaints.</description>
    <label>Complaints, if any</label>
    <length>50</length>
    <type>Text</type>
</CustomField>