force-app/main/default/objects/Case/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Stores the email address of a contact or customer.</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>