force-app/main/default/objects/Case/fields/Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile__c</fullName>
    <description>Stores the mobile number of the contact person or customer.</description>
    <label>Contact Mobile</label>
    <type>Phone</type>
</CustomField>