force-app/main/default/objects/Case/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Indicates if a transaction is initiated by the customer.</description>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>