force-app/main/default/objects/Case/fields/Conversion_Fees__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Fees__c</fullName>
    <description>Fees approved for a conversion process, if applicable.</description>
    <inlineHelpText>(Excluding GST)</inlineHelpText>
    <label>Approved Conversion Fee Excluding Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>