force-app/main/default/objects/Case/fields/Conversion_Fees_SecondCall__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Fees_SecondCall__c</fullName>
    <inlineHelpText>As Per TL Retention</inlineHelpText>
    <label>Approved Conversion Fee ExcludingTax(TL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>