force-app/main/default/objects/Case/fields/Conversion_Fees_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Fees_With_Tax__c</fullName>
    <formula>Conversion_Fees__c + (VALUE($Label.PNBCRM_Tax_For_Conversion_Fee) * Conversion_Fees__c)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Fees With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>