force-app/main/default/objects/Case/fields/ConversionFeesWithTaxNew__c.field-meta.xml
<CustomField>
    <fullName>ConversionFeesWithTaxNew__c</fullName>
    <description>UC 52 Field For Second Call</description>
    <formula>Conversion_Fees_SecondCall__c+ (VALUE($Label.PNBCRM_Tax_For_Conversion_Fee) * Conversion_Fees_SecondCall__c)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ConversionFeesWithTaxNew</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>