force-app/main/default/objects/Case/fields/COPS__c.field-meta.xml
<CustomField>
    <fullName>COPS__c</fullName>
    <description>An acronym representing a specific system or process.</description>
    <label>COPS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>