force-app/main/default/objects/Case/fields/Courier_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Courier_Company_Name__c</fullName>
    <description>Name of the courier company used for shipping.</description>
    <label>Courier Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>