force-app/main/default/objects/Case/fields/Courier_Company_Name_Branch__c.field-meta.xml
<CustomField>
    <fullName>Courier_Company_Name_Branch__c</fullName>
    <description>Name of the courier company and its branch for package tracking.</description>
    <label>Courier Company Name(Branch)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>