force-app/main/default/objects/Case/fields/Courier_Date__c.field-meta.xml
<CustomField>
    <fullName>Courier_Date__c</fullName>
    <description>The date when an item was sent through a courier service.</description>
    <label>Courier Date</label>
    <type>Date</type>
</CustomField>