force-app/main/default/objects/Case/fields/Courier_Date_Branch__c.field-meta.xml
<CustomField>
    <fullName>Courier_Date_Branch__c</fullName>
    <description>Date of courier service and its branch.</description>
    <label>Courier Date(Branch)</label>
    <type>Date</type>
</CustomField>