force-app/main/default/objects/Case/fields/Courier_Name__c.field-meta.xml
<CustomField>
    <fullName>Courier_Name__c</fullName>
    <description>The name of the courier company responsible for a delivery.</description>
    <label>Courier Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLUE DART</fullName>
            </value>
            <value>
                <fullName>By VAN</fullName>
            </value>
            <value>
                <fullName>DTDC</fullName>
            </value>
            <value>
                <fullName>FRANCH EXPRESS COURIER</fullName>
            </value>
            <value>
                <fullName>INDIA POST</fullName>
            </value>
            <value>
                <fullName>PROFESSIONAL</fullName>
            </value>
            <value>
                <fullName>SHREE MARUTI COURIER SERVICES</fullName>
            </value>
            <value>
                <fullName>Trackon</fullName>
            </value>
            <value>
                <fullName>By Hand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>