force-app/main/default/objects/Case/fields/Courier_Name_Branch__c.field-meta.xml
<CustomField>
    <fullName>Courier_Name_Branch__c</fullName>
    <description>Name of the courier company and its branch.</description>
    <label>Courier Name(Branch)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Dart</fullName>
                <label>BLUE DART</label>
            </value>
            <value>
                <fullName>By VAN</fullName>
            </value>
            <value>
                <fullName>DTDC</fullName>
            </value>
            <value>
                <fullName>FRANCH EXPRESS COURIER</fullName>
            </value>
            <value>
                <fullName>INDIA POST</fullName>
            </value>
            <value>
                <fullName>PROFESSIONAL</fullName>
            </value>
            <value>
                <fullName>SHREE MARUTI COURIER SERVICES</fullName>
            </value>
            <value>
                <fullName>Trackon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>