force-app/main/default/objects/Case/fields/Creator_Team__c.field-meta.xml
<CustomField>
    <fullName>Creator_Team__c</fullName>
    <description>The team responsible for creating the record.</description>
    <formula>First_Owner__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Team</label>
    <type>Text</type>
</CustomField>