force-app/main/default/objects/Case/fields/CSO_Description__c.field-meta.xml
<CustomField>
    <fullName>CSO_Description__c</fullName>
    <label>CSO Description</label>
    <type>TextArea</type>
</CustomField>