force-app/main/default/objects/Case/fields/Current_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Due_Date__c</fullName>
    <description>The current due date for a payment or task.</description>
    <label>Current Due Date</label>
    <type>Date</type>
</CustomField>