force-app/main/default/objects/Case/fields/Current_EMI_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_EMI_Amount__c</fullName>
    <description>Specifies the current amount of Equated Monthly Installment to be paid.</description>
    <label>Current EMI Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>