force-app/main/default/objects/Case/fields/Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner__c</fullName>
    <description>Indicates the current owner or responsible person/entity for a case or record.</description>
    <formula>$User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Owner</label>
    <type>Text</type>
</CustomField>