force-app/main/default/objects/Case/fields/Current_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Rate__c</fullName>
    <formula>Loan_Account__r.Current_ROI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>