force-app/main/default/objects/Case/fields/Current_ROI__c.field-meta.xml
<CustomField>
    <fullName>Current_ROI__c</fullName>
    <description>Indicates the current Rate of Interest (ROI) applicable to a loan or transaction.</description>
    <label>Current ROI</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>