force-app/main/default/objects/Case/fields/Current_Status_of_Repayment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_of_Repayment_Mode__c</fullName>
    <description>Specifies the current status of the chosen mode of repayment.</description>
    <label>Current Status of Repayment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NACH</fullName>
            </value>
            <value>
                <fullName>PDC</fullName>
            </value>
            <value>
                <fullName>Example</fullName>
                <isActive>false</isActive>
                <label>Example</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>