force-app/main/default/objects/Case/fields/Current_Team__c.field-meta.xml
<CustomField>
    <fullName>Current_Team__c</fullName>
    <label>Current Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>